variazione messaggio Hello

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </a>
       </div>
 
-      <h1 class="font-semibold text-5xl text-slate-700 dark:text-slate-200">Hello Vite JS Tailwind!</h1>
+      <h1 class="font-semibold text-5xl text-slate-700 dark:text-slate-200">Hello Vite TS Tailwind!</h1>
       <div class="p-8">
         <button id="counter" type="button"
           class="border border-transparent rounded-lg py-4 px-8 transition-[border-color] duration-[250ms] hover:border-[#646cff] text-slate-700 dark:text-slate-200"></button>
