html block in app transferred in main.ts

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Vite + TS + TW Dark Toggler </title>
 </head>
 
-<body class="m-0 flex place-items-center min-w-[320px] min-h-screen leading-15 antialiased bg-slate-100 dark:bg-slate-700">
+<body
+  class="m-0 flex place-items-center min-w-[320px] min-h-screen leading-15 antialiased bg-slate-100 dark:bg-slate-700">
 
   <button id="theme-toggle" type="button" class="absolute p-2 top-2 right-2 text-gray-500 dark:text-gray-400">
     <svg id="theme-toggle-light-icon" class="h-6 w-6 hidden" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -25,38 +26,6 @@
   </button>
 
   <div id="app" class="max-w-7xl my-0 mx-auto text-center">
-
-    <div>
-      <div class="m-6 flex justify-center">
-
-        <a href="https://vitejs.dev" target="_blank">
-          <img src="/vite.svg"
-            class="h-32 p-6 will-change-[filter] transition-[filter] duration-300  hover:drop-shadow-[0_0_35px_rgba(100,108,255,0.67)]"
-            alt="Vite logo" />
-        </a>
-        <a href="https://www.typescriptlang.org" target="_blank">
-          <img src="/src/typescript.svg"
-            class="h-32 p-6 will-change-[filter] transition-[filter] duration-300 hover:drop-shadow-[0_0_35px_rgba(49,120,198,0.67)]"
-            alt="JavaScript logo" />
-        </a>
-        <a href="https://tailwindcss.com" target="_blank">
-          <img src="/tailwindcss-icon.svg"
-            class="h-32 p-6 will-change-[filter] transition-[filter] duration-300 hover:drop-shadow-[0_0_35px_rgba(49,120,198,0.67)]"
-            alt="Tailwind logo" />
-        </a>
-      </div>
-
-      <h1 class="font-semibold text-5xl text-slate-700 dark:text-slate-200">Hello Vite TS Tailwind!</h1>
-      <div class="p-8">
-        <button id="counter" type="button"
-          class="border border-transparent rounded-lg py-4 px-8 transition-[border-color] duration-[250ms] hover:border-[#646cff] text-slate-700 dark:text-slate-200"></button>
-      </div>
-      <p class="dark:text-[#888888]">
-        Click on the Vite logo to learn more
-      </p>
-    </div>
-
-  </div>
 
   <script type="module" src="/src/main.ts"></script>
 
